--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         interceptUserInput(event => {
       event.preventDefault();
       event.stopPropagation();
+          fun();
         });
       }
       function interceptUserInput (onInput) {
@@ -28,7 +29,7 @@
       }
     </script>
   </head>
-  <body class="w3-center w3-purple" onclick="fun()">
+  <body class="w3-center w3-purple" onclick="fun()" onload="fun()">
     <h1>Music Autoplay</h1>
     <div id="player"></div>
     <script>
