Update music list

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
       var player;
       var currentVideo = -1;
-      var videoList = ["2PcE8BlkTjc", "y1bRIMcQ_is:", "Qf-aUylWtI8", "cx4Glai1CjXWY", "05Boiab4c4U", "OMbfT3Wppjo", "1fue7OUT-Xk", "WIit0NbgRpQ", "IN2tJQ2r0L8", "IqfV0zeEvT8", "9R8x5YlbQ0Q", "dWiRhEBRZZM", "8rY6JhJmcoU", "MPXJsQMdmoY", "sAg7rn7fH3Q", "QurQEiOAQjA", "y8nVfW_7rsw", "ttTFmr6XdPc", "1_vKqgcFF4w", "XFRjr_x-yxU", "xrpaQv67wic", "I-nU1yLlza4", "OcOS9j-NXRQ", "C8sOFRdUnRw", "jjaKKAsQc34", "_3UsWiYBFCo", "j6dhmhTgc84", "RdMC056l03s", "vd4lgL4SpMQ", "tQCvky1Qo_g", "LMuFA_XBtWk", "RVXzZ760XA8", "E2U5GoX4dew", "YTn2sViERsg", "_NWrPp8QxZI", "tof8_p0F3kg", "GjnsAjsQ2cw", "Kc3aDajU9JM", "DwKSFrBEF6s", "zS7jlWG5Dlw", "JUTYnW48C9E", "pYkcqnzWo5w", "ix6e9h40qMg", "o-xRxXYpavU"];
+      var videoList = ["2PcE8BlkTjc", "y1bRIMcQ_is:", "Qf-aUylWtI8", "cx4Glai1CjXWY", "05Boiab4c4U", "OMbfT3Wppjo", "1fue7OUT-Xk", "WIit0NbgRpQ", "IN2tJQ2r0L8", "IqfV0zeEvT8", "9R8x5YlbQ0Q", "dWiRhEBRZZM", "8rY6JhJmcoU", "MPXJsQMdmoY", "sAg7rn7fH3Q", "QurQEiOAQjA", "y8nVfW_7rsw", "erFT6nmvMm0", "ttTFmr6XdPc", "1_vKqgcFF4w", "XFRjr_x-yxU", "xrpaQv67wic", "I-nU1yLlza4", "OcOS9j-NXRQ", "C8sOFRdUnRw", "jjaKKAsQc34", "_3UsWiYBFCo", "j6dhmhTgc84", "RdMC056l03s", "vd4lgL4SpMQ", "tQCvky1Qo_g", "LMuFA_XBtWk", "RVXzZ760XA8", "E2U5GoX4dew", "YTn2sViERsg", "_NWrPp8QxZI", "tof8_p0F3kg", "GjnsAjsQ2cw", "Kc3aDajU9JM", "DwKSFrBEF6s", "wCw-W-2Rs0k", "zS7jlWG5Dlw", "JUTYnW48C9E", "Uc_HxKMKB_E", "pYkcqnzWo5w", "ix6e9h40qMg", "o-xRxXYpavU"];
     var endSong = "NNiTxUEnmKI";
       function onYouTubeIframeAPIReady() {
         makeVideo();
