--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ Option to disable looping.
         </p>
         <br />
         <button onclick="preset(0)" class="w3-btn w3-round-xlarge w3-ripple btn1">Preset 1 (Church)</button>
-        <button onclick="preset(1)" class="w3-btn w3-round-xlarge w3-ripple btn1">Preset 2 (Original)</button
-        ><br /><br />
+        <button onclick="preset(1)" class="w3-btn w3-round-xlarge w3-ripple btn1">Preset 2 (Original)</button>
+        <button onclick="preset(2)" class="w3-btn w3-round-xlarge w3-ripple btn1">Preset 3 (Mario Kart World Remixes)</button><br /><br />
         <button onclick="shuffleList()" class="w3-btn w3-round-xlarge w3-ripple btn1v2">Shuffle the List</button>
         <button onclick="go()" class="w3-btn w3-round-xlarge w3-ripple btn1v2">Go!</button>
       </div>
@@ -257,6 +257,11 @@ Option to disable looping.
             var ta =
               "2PcE8BlkTjc, Qf-aUylWtI8, 05Boiab4c4U, OMbfT3Wppjo, 1fue7OUT-Xk, WIit0NbgRpQ, IN2tJQ2r0L8, IqfV0zeEvT8, 9R8x5YlbQ0Q, dWiRhEBRZZM, 8rY6JhJmcoU, MPXJsQMdmoY, sAg7rn7fH3Q, QurQEiOAQjA, y8nVfW_7rsw, erFT6nmvMm0, ttTFmr6XdPc, 1_vKqgcFF4w, XFRjr_x-yxU, xrpaQv67wic, I-nU1yLlza4, OcOS9j-NXRQ, C8sOFRdUnRw, jjaKKAsQc34, _3UsWiYBFCo, j6dhmhTgc84, RdMC056l03s, vd4lgL4SpMQ, tQCvky1Qo_g, LMuFA_XBtWk, RVXzZ760XA8, E2U5GoX4dew, YTn2sViERsg, _NWrPp8QxZI, tof8_p0F3kg, GjnsAjsQ2cw, Kc3aDajU9JM, DwKSFrBEF6s, wCw-W-2Rs0k, zS7jlWG5Dlw, JUTYnW48C9E, Uc_HxKMKB_E, pYkcqnzWo5w, ix6e9h40qMg, o-xRxXYpavU";
             var fv = "NNiTxUEnmKI";
+            break;
+          case 2:
+            var ta =
+              "lF2cTSbvQKA, iAC5xQl3PYc, Jh1sUFdHk4U, -5alcwY1l08, ZtlYY0ehDnk, zBKvAXFYVng, eZqpAN62Dyg, jTyWgEHKiD4, ORQSbqPMYsE, SeHzvd3f76k, -1NwdwNyqPU, al8EhsZNlmA, FgfKdb6DO10, 5JBfdBsyZ5U, MAo7DqPQbcw, H53yTFgsBjQ, ZW3gnnFmx0I, g4uyjv1rx7E, BMmS5vPvr0s, 6LRY_G9AJa4, KRipnGXmxZE, 52G8Xuaq_qE, 7BxuOKCrvBI, ruzGxp4tj74, NCvOWz5apdc, UQuJxNSaMXM, xVY_jiSYydQ, J4DPVKgnkdY, AKmZ4BjNm64, dzlshDFBOvk, uRGVpvWlaJ8, DWdy5ssWDBw, SoeWguNcfnw, yC86pnKhdpw, rFB_pqQ1zmA, zOpu-nfJDaQ, Iztb_opoEq0, 0sLMuZ-in28, RpsuRg6MVec, oyieDrmcgAk, Ba0esvm60WE, lhdhqKZ326U, -SNeylr_I10, HG2sJhWBbj0, QlfnSv4v8Bw, a0Jxc4WuI40, 3PvGxXcg1kA, 5lC28cd8W6M, 9eaIKT8SEmw, cqf01RKMDr4, DpiWPKU2NCs, lr-eJZyOIgs, RImnt53fRJA, aV0YhlrlOHE, Ik4RBE8vAxo, HdQ9dXm3Ajg, jW3hiF5356w, MecBcbjbBVU, s_5LPxsnzmE, wBBK4j_0WuQ, 3-hyeMMpMQg, xJjRw5m0ykw, hiCRVA1OWC4, WkhBnCA51ak, s0CqXv4hmog, L003ap8pjO4, pdH-A5tPrCg, h8pDxOPGLzA, NrG105pwi0g";
+            var fv = "Kt3ZCRZO_G0";
             break;
         }
         document.getElementById("playlist").value = ta;
